crates/backyard-parser/tests/snapshots/number__decimal.snap
---
source: crates/backyard-parser/tests/number.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: assignment
    left:
      node_type: variable
      name:
        node_type: identifier
        name: a
        loc:
          start:
            line: 1
            column: 0
            offset: 0
          end:
            line: 1
            column: 1
            offset: 1
        leadings: ~
        trailings: ~
      loc:
        start:
          line: 1
          column: 0
          offset: 0
        end:
          line: 1
          column: 1
          offset: 1
      leadings: ~
      trailings: ~
    operator: "="
    right:
      node_type: number
      value: "0.1"
      loc:
        start:
          line: 1
          column: 5
          offset: 5
        end:
          line: 1
          column: 5
          offset: 5
      leadings: ~
      trailings: ~
    loc:
      start:
        line: 1
        column: 3
        offset: 3
      end:
        line: 1
        column: 5
        offset: 5
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 8
    offset: 8
leadings: ~
trailings: ~
